# juv-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: commands.rs  main.rs  notebook.rs  printer.rs  script.rs
src/static/: setup.py
