[package]
name = "juv"
version = "0.1.0"
edition = "2021"

[dependencies]
anstream = "0.6.18"
anyhow = "1.0.93"
clack = "0.1.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
glob = "0.3.1"
nbformat = { version = "0.3.2", git = "https://github.com/runtimed/runtimed", branch = "manzt/nbformat-serialize" }
once_cell = "1.20.2"
owo-colors = "4.1.0"
regex = "1.11.1"
serde_json = "1.0.132"
tempfile = "3.13.0"
uuid = "1.11.0"
